enum のメンバー名を OAS の x-enum-varnames として出力する
