# src/app/server/Generated/Viewer/lib/Model/ReleaseFormatValue.php
@@ -43,27 +43,27 @@ enum ReleaseFormatValue: int
     /**
      * 配信
      */
-    case NUMBER_1 = 1;
+    case DIGITAL = 1;
 
     /**
      * CD
      */
-    case NUMBER_2 = 2;
+    case CD = 2;
 
     /**
      * DVD
      */
-    case NUMBER_3 = 3;
+    case DVD = 3;
 
     /**
      * Blu-ray
      */
-    case NUMBER_4 = 4;
+    case BLU_RAY = 4;
 
     /**
      * その他
      */
-    case NUMBER_99 = 99;
+    case OTHER = 99;
 
 }
 
